--- a/contact.html
+++ b/contact.html
@@ -349,27 +349,47 @@
     </section>
 
     <section class="contact-us container">
-      <div class="mw-930">
-        <div class="row mb-5">
-          <div class="col-lg-6">
+      <div class="mb" style="display: flex; justify-content: space-around">
+        <div class="mb-6">
+          <div class="col-lg-12">
+            <h3 class="mb-4">Horaires :</h3>
+            <p class="mb-4">Lundi 9h - 12h / 14h - 16h <br>
+              Mardi à Vendredi 9h - 12h / 14h - 19h<br>
+              Samedi 9h - 12h / 14h - 17h</p>
+          </div>
+        </div>
+        <div class="mb-6">
+          <div class="col-lg-12 ">
             <h3 class="mb-4">Magasin situé</h3>
-            <p class="mb-4">14C, Rue Georges Besse<br>21320 Créancey</p>
+            <p class="mb-4">14C rue Georges Besse 21320 Créancey
+              03 80 35 75 49</p>
             <p class="mb-4">contact@magasin-yrelec.com<br>+33 3 80 35 75 49</p>
           </div>
         </div>
+      </div>
+      <div class="mw-930">
         <div class="contact-us__form">
           <form name="contact-us-form" class="needs-validation" novalidate>
-            <h3 class="mb-5">Une question ?</h3>
+            <h3 class="mb-5">
+              Une question avant de nous rendre visite ? C'est ici n'hésitez pas !</h3>
+            <div class="form-floating my-4">
+              <input type="text" class="form-control" id="contact_us_lastname" placeholder="Name *" required>
+              <label for="contact_us_lastname">Nom *</label>
+            </div>
             <div class="form-floating my-4">
               <input type="text" class="form-control" id="contact_us_name" placeholder="Name *" required>
-              <label for="contact_us_name">Nom *</label>
+              <label for="contact_us_name">Prénom *</label>
+            </div>
+            <div class="form-floating my-4">
+              <input type="text" class="form-control" id="contact_us_phone" placeholder="Name *" required>
+              <label for="contact_us_phone">Téléphone *</label>
             </div>
             <div class="form-floating my-4">
               <input type="email" class="form-control" id="contact_us_email" placeholder="Email address *" required>
               <label for="contact_us_name">Email *</label>
             </div>
             <div class="my-4">
-              <textarea class="form-control form-control_gray" placeholder="Message *" cols="30" rows="8" required></textarea>
+              <textarea class="form-control form-control_gray" placeholder="Votre demande *" cols="30" rows="8" required></textarea>
             </div>
             <div class="my-4">
               <button type="submit" class="btn btn-primary">Envoyer</button>
@@ -403,30 +423,17 @@
 
           <ul class="social-links list-unstyled d-flex flex-wrap mb-0">
             <li>
-              <a href="https://www.facebook.com" class="footer__social-link d-block">
+              <a href="https://www.facebook.com/YRELECMagasin
+" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15" xmlns="http://www.w3.org/2000/svg"><use href="#icon_facebook" /></svg>
               </a>
             </li>
             <li>
-              <a href="https://www.twitter.com" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_twitter" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg"><use href="#icon_twitter" /></svg>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com" class="footer__social-link d-block">
+              <a href="@yrelecmagasin" class="footer__social-link d-block">
                 <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg"><use href="#icon_instagram" /></svg>
               </a>
             </li>
-            <li>
-              <a href="https://www.youtube.com" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11" xmlns="http://www.w3.org/2000/svg"><path d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z"/></svg>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.pinterest.com" class="footer__social-link d-block">
-                <svg class="svg-icon svg-icon_pinterest" width="14" height="15" viewBox="0 0 14 15" xmlns="http://www.w3.org/2000/svg"><use href="#icon_pinterest" /></svg>
-              </a>
-            </li>
+
           </ul>
         </div><!-- /.footer-column -->
 
