--- a/equipe.html
+++ b/equipe.html
@@ -335,26 +335,14 @@
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
+                                    <img loading="lazy" class="h-auto" src="assets/images/CathySimple.png" width="674" height="674" alt="">
+                                    <a data-fancybox="gallery" href="assets/images/CathySimple.png" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
                                     </a>
                                 </div>
                                 <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0-1.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0-1.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0-2.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0-2.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0-3.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0-3.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
+                                    <img loading="lazy" class="h-auto" src="assets/images/CathyUstensiles.png" width="674" height="674" alt="">
+                                    <a data-fancybox="gallery" href="assets/images/CathyUstensiles.png" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
                                     </a>
                                 </div>
@@ -366,17 +354,15 @@
                     <div class="product-single__thumbnail">
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0.jpg" width="104" height="104" alt=""></div>
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0-1.jpg" width="104" height="104" alt=""></div>
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0-2.jpg" width="104" height="104" alt=""></div>
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0-3.jpg" width="104" height="104" alt=""></div>
+                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="assets/images/CathySimple.png" width="104" height="104" alt=""></div>
+                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="assets/images/CathyUstensiles.png" width="104" height="104" alt=""></div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-5">
-
                 <h1 class="product-single__name">Cathy
                 </h1>
 
@@ -411,29 +397,18 @@
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
+                                    <img loading="lazy" class="h-auto" src="assets/images/AurélieSimple.png" width="674" height="674" alt="">
+                                    <a data-fancybox="gallery" href="assets/images/AurélieSimple.png" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
                                     </a>
                                 </div>
                                 <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0-1.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0-1.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
+                                    <img loading="lazy" class="h-auto" src="assets/images/AurélieUstensiles.png" width="674" height="674" alt="">
+                                    <a data-fancybox="gallery" href="assets/images/AurélieUstensiles.png" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
                                     </a>
                                 </div>
-                                <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0-2.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0-2.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide product-single__image-item">
-                                    <img loading="lazy" class="h-auto" src="images/products/product_0-3.jpg" width="674" height="674" alt="">
-                                    <a data-fancybox="gallery" href="images/products/product_0-3.jpg" data-bs-toggle="tooltip" data-bs-placement="left" title="Zoom">
-                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_zoom" /></svg>
-                                    </a>
-                                </div>
+
                             </div>
                             <div class="swiper-button-prev"><svg width="7" height="11" viewBox="0 0 7 11" xmlns="http://www.w3.org/2000/svg"><use href="#icon_prev_sm" /></svg></div>
                             <div class="swiper-button-next"><svg width="7" height="11" viewBox="0 0 7 11" xmlns="http://www.w3.org/2000/svg"><use href="#icon_next_sm" /></svg></div>
@@ -442,10 +417,8 @@
                     <div class="product-single__thumbnail">
                         <div class="swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0.jpg" width="104" height="104" alt=""></div>
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0-1.jpg" width="104" height="104" alt=""></div>
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0-2.jpg" width="104" height="104" alt=""></div>
-                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="images/products/product_0-3.jpg" width="104" height="104" alt=""></div>
+                               <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="assets/images/AurélieSimple.png" width="104" height="104" alt=""></div>
+                                <div class="swiper-slide product-single__image-item"><img loading="lazy" class="h-auto" src="assets/images/AurélieUstensiles.png" width="104" height="104" alt=""></div>
                             </div>
                         </div>
                     </div>
@@ -480,14 +453,13 @@
 </main>
 
 <!-- Footer Type 2 -->
-<footer id="footer" class="footer footer_type_2 bordered">
-
+<footer class="footer footer_type_1">
     <div class="footer-middle container">
         <div class="row row-cols-lg-5 row-cols-2">
             <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
                 <div class="logo">
                     <a href="./index.html">
-                        <img src="images/logo-dark-blue.png" alt="Uomo" class="logo__image d-block">
+                        <img src="images/logo.png" alt="Uomo" class="logo__image d-block">
                     </a>
                 </div><!-- /.logo -->
                 <p class="footer-address">1418 River Drive, Suite 35 Cottonhall, CA 9622 United States</p>
@@ -501,30 +473,17 @@
 
                 <ul class="social-links list-unstyled d-flex flex-wrap mb-0">
                     <li>
-                        <a href="https://www.facebook.com" class="footer__social-link d-block">
+                        <a href="https://www.facebook.com/YRELECMagasin
+" class="footer__social-link d-block">
                             <svg class="svg-icon svg-icon_facebook" width="9" height="15" viewBox="0 0 9 15" xmlns="http://www.w3.org/2000/svg"><use href="#icon_facebook" /></svg>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.twitter.com" class="footer__social-link d-block">
-                            <svg class="svg-icon svg-icon_twitter" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg"><use href="#icon_twitter" /></svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com" class="footer__social-link d-block">
+                        <a href="@yrelecmagasin" class="footer__social-link d-block">
                             <svg class="svg-icon svg-icon_instagram" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg"><use href="#icon_instagram" /></svg>
                         </a>
                     </li>
-                    <li>
-                        <a href="https://www.youtube.com" class="footer__social-link d-block">
-                            <svg class="svg-icon svg-icon_youtube" width="16" height="11" viewBox="0 0 16 11" xmlns="http://www.w3.org/2000/svg"><path d="M15.0117 1.8584C14.8477 1.20215 14.3281 0.682617 13.6992 0.518555C12.5234 0.19043 7.875 0.19043 7.875 0.19043C7.875 0.19043 3.19922 0.19043 2.02344 0.518555C1.39453 0.682617 0.875 1.20215 0.710938 1.8584C0.382812 3.00684 0.382812 5.46777 0.382812 5.46777C0.382812 5.46777 0.382812 7.90137 0.710938 9.07715C0.875 9.7334 1.39453 10.2256 2.02344 10.3896C3.19922 10.6904 7.875 10.6904 7.875 10.6904C7.875 10.6904 12.5234 10.6904 13.6992 10.3896C14.3281 10.2256 14.8477 9.7334 15.0117 9.07715C15.3398 7.90137 15.3398 5.46777 15.3398 5.46777C15.3398 5.46777 15.3398 3.00684 15.0117 1.8584ZM6.34375 7.68262V3.25293L10.2266 5.46777L6.34375 7.68262Z"/></svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.pinterest.com" class="footer__social-link d-block">
-                            <svg class="svg-icon svg-icon_pinterest" width="14" height="15" viewBox="0 0 14 15" xmlns="http://www.w3.org/2000/svg"><use href="#icon_pinterest" /></svg>
-                        </a>
-                    </li>
+
                 </ul>
             </div><!-- /.footer-column -->
 
@@ -562,38 +521,51 @@
                 </ul>
             </div><!-- /.footer-column -->
 
-            <div class="footer-column mb-4 mb-lg-0">
-                <h6 class="sub-menu__title text-uppercase">Opening Time</h6>
-                <ul class="list-unstyled">
-                    <li><span class="menu-link">Mon - Fri: 8AM - 9PM</span></li>
-                    <li><span class="menu-link">Sat: 9AM - 8PM</span></li>
-                    <li><span class="menu-link">Sun: Closed</span></li>
-                </ul>
+            <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
+                <h6 class="sub-menu__title text-uppercase">Subscribe</h6>
+                <p>Be the first to get the latest news about trends, promotions, and much more!</p>
+                <form action="./index.html" class="footer-newsletter__form position-relative bg-body">
+                    <input class="form-control border-white" type="email" name="email" placeholder="Your email address">
+                    <input class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100" type="submit" value="JOIN">
+                </form>
+
+                <div class="mt-4 pt-3">
+                    <strong class="fw-medium">Secure payments</strong>
+                    <p class="mt-2">
+                        <img loading="lazy" src="images/payment-options.png" alt="Acceptable payment gateways">
+                    </p>
+                </div>
             </div><!-- /.footer-column -->
         </div><!-- /.row-cols-5 -->
     </div><!-- /.footer-middle container -->
 
-    <div class="footer-bottom">
-        <div class="container d-md-flex align-items-center">
-            <span class="footer-copyright me-auto">©2023 Uomo</span>
-            <div class="footer-settings d-md-flex align-items-center">
-                <select id="footerSettingsLanguage" class="form-select form-select-sm bg-transparent border-0" aria-label="Default select example" name="store-language">
-                    <option class="footer-select__option" selected>United Kingdom | English</option>
-                    <option class="footer-select__option" value="1">United States | English</option>
-                    <option class="footer-select__option" value="2">German</option>
-                    <option class="footer-select__option" value="3">French</option>
-                    <option class="footer-select__option" value="4">Swedish</option>
-                </select>
+    <div class="footer-bottom container">
+        <div class="d-block d-md-flex align-items-center">
+            <span class="footer-copyright me-auto">©2024 Uomo</span>
+            <div class="footer-settings d-block d-md-flex align-items-center">
+                <div class="d-flex align-items-center">
+                    <label for="footerSettingsLanguage" class="me-2 text-secondary">Language</label>
+                    <select id="footerSettingsLanguage" class="form-select form-select-sm bg-transparent" aria-label="Default select example" name="store-language">
+                        <option class="footer-select__option" selected>United Kingdom | English</option>
+                        <option class="footer-select__option" value="1">United States | English</option>
+                        <option class="footer-select__option" value="2">German</option>
+                        <option class="footer-select__option" value="3">French</option>
+                        <option class="footer-select__option" value="4">Swedish</option>
+                    </select>
+                </div>
 
-                <select id="footerSettingsCurrency" class="form-select form-select-sm bg-transparent border-0" aria-label="Default select example" name="store-language">
-                    <option class="footer-select__option" selected>$ USD</option>
-                    <option class="footer-select__option" value="1">£ GBP</option>
-                    <option class="footer-select__option" value="2">€ EURO</option>
-                </select>
+                <div class="d-flex align-items-center">
+                    <label for="footerSettingsCurrency" class="ms-md-3 me-2 text-secondary">Currency</label>
+                    <select id="footerSettingsCurrency" class="form-select form-select-sm bg-transparent" aria-label="Default select example" name="store-language">
+                        <option selected>$ USD</option>
+                        <option value="1">£ GBP</option>
+                        <option value="2">€ EURO</option>
+                    </select>
+                </div>
             </div><!-- /.footer-settings -->
-        </div><!-- /.container d-flex align-items-center -->
+        </div><!-- /.d-flex -->
     </div><!-- /.footer-bottom container -->
-</footer>
+</footer><!-- /.footer footer_type_1 -->
 
 <!-- Mobile Fixed Footer -->
 <footer class="footer-mobile container w-100 px-5 d-md-none bg-body">
